--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,8 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>Test Barbershop</h1>
+            <!--<h1>Test Barbershop</h1>-->
+            <img src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.0-9/52460270_2002213323230527_426281899334303744_n.jpg?_nc_cat=105&_nc_ht=scontent-sea1-1.xx&oh=2ee7df7af5bc24f802cbd71ef5e266ba&oe=5CF37038" alt="Test Barbershop">
             <hr>
             <p>Serving Longbeach since 2019</p>
             <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
